# KING

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: app.yaml
config/prompts/gigachat/: default.yaml
docker/prometheus/: prometheus.yml
king/: __init__.py  main.py
king/adapters/ffi/: __init__.py
king/adapters/grpc/: __init__.py
king/adapters/http/: __init__.py
king/adapters/llm/: __init__.py
king/adapters/llm/gigachat/: README.md  __init__.py  adapter.py  oauth.py  prompt_manager.py
king/adapters/messaging/: README.md  __init__.py  event_bus_adapter.py  kafka_adapter.py  rabbitmq_adapter.py
king/adapters/vector_store/: README.md  __init__.py  chroma_adapter.py  qdrant_adapter.py
king/adapters/websocket/: __init__.py
king/api/: __init__.py
king/api/grpc/: __init__.py
king/api/rest/: README.md  __init__.py  agents.py  health.py  llm.py  messages.py  metrics.py  schemas.py  tasks.py
king/api/websocket/: __init__.py
king/core/domain/: __init__.py  agent.py  event_bus.py  events.py  message.py  task.py
king/core/ports/: __init__.py  config.py  llm.py  messaging.py  repositories.py  vector_store.py
king/core/services/: __init__.py  agent_orchestrator.py  llm_service.py  message_processor.py  rag_service.py  task_scheduler.py
king/infrastructure/: __init__.py  dependencies.py
king/infrastructure/config/: README.md  __init__.py  config_loader.py  environment_config.py  settings.py
king/infrastructure/logging/: __init__.py  setup.py
king/infrastructure/metrics/: __init__.py  prometheus.py
king/infrastructure/middleware/: __init__.py  metrics_middleware.py
king/infrastructure/persistence/: __init__.py  in_memory_repositories.py
tests/: __init__.py
